maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:10: error: ';' expected but 'else' found.
    else{
    ^